@@ -19,6 +19,8 @@ REPO_REV_LOCAL_BOOKKEEPING_PATH: $(LOCAL_BOOKKEEPING_PATH)/$(REPO_REV)
 LOCAL_COPY_OF_REMOTE_INFO_MAP_PATH: $(REPO_REV_LOCAL_BOOKKEEPING_PATH)/remote_info_map.txt
 INSTL_HISTORY_PATH: $(LOCAL_BOOKKEEPING_PATH)/instl_history.txt
 INSTL_HISTORY_TEMP_PATH: $(LOCAL_BOOKKEEPING_PATH)/instl_history.temp.txt
+XCOPY_EXCLUDE_FILE_NAME: xcopy-exclude.txt
+XCOPY_EXCLUDE_FILE_PATH: $(LOCAL_SYNC_DIR)/$(XCOPY_EXCLUDE_FILE_NAME)
 
 COPY_IGNORE_PATTERNS:
     - ".svn"
